# Rust-URL-Shortening

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  TESTING.md  clippy.toml  docker-compose.postgres.yml  docker-compose.yml  handlers.rs  lib.rs  main.rs  routes.rs  rustfmt.toml  utils.rs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
benches/: url_generation.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
examples/: README.md  basic_usage.rs  batch_urls.rs  stats_check.rs
migrations/20230310123567_create_usage_logs/: down.sql  up.sql
migrations/20230310123678_create_redirect_stats/: down.sql  up.sql
migrations/20230310123789_add_expiration_date_to_urls/: down.sql  up.sql
scripts/: README.md  clean.sh  docker-build.sh  performance-test.sh  setup.sh  test.sh
src/: config.rs  error.rs  handlers.rs  lib.rs  loggers.rs  main.rs  routes.rs
tests/: integrationTests.rs
tests/unit/: models_tests.rs  utils_tests.rs
