[package]
name = "rust-url-shortener"
version = "0.1.0"
edition = "2021"
authors = ["UNC-CH Google Developer Student Club (GDSC)"]
description = "A blazingly fast, production-ready URL shortening service built entirely in Rust"
readme = "README.md"
homepage = "https://github.com/UNC-GDSC/Rust-URL-Shortening"
repository = "https://github.com/UNC-GDSC/Rust-URL-Shortening"
license = "MIT"
keywords = ["url-shortener", "web", "actix", "diesel", "rest-api"]
categories = ["web-programming", "web-programming::http-server"]

[lib]
name = "rust_url_shortener"
path = "src/lib.rs"

[[bin]]
name = "rust-url-shortener"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
diesel = { version = "2.0.4", features = ["sqlite", "r2d2", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
